<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:background="@drawable/background"
	android:textColor="#ffffff"  >
		
    
    <ImageView 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignLeft="@+id/gtop_layout"
        android:layout_alignRight="@+id/gtop_layout"
        android:layout_alignTop="@+id/gtop_layout"
        android:layout_alignBottom="@+id/gtop_layout"
        android:padding="0dp"
        android:layout_margin="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/wood_game"/>
    
    <RelativeLayout 
        android:id="@+id/gtop_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">  
        
    
    <TextView
        android:id="@+id/lblCurPlayer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/curPlayer"
        android:textSize="24sp"
        android:textStyle="bold"
	    android1:textColor="#d7a91b"  />

        <LinearLayout
            android:id="@+id/dice1layout"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:padding="2dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="3dp"
            android:layout_centerHorizontal="true" 
       		android:layout_below="@id/lblCurPlayer" >
       		
            <ImageView
                android1:layout_marginRight="5dp"
                android1:layout_marginLeft="10dp"
                android1:layout_width="40dp"
                android1:layout_height="40dp"
                android1:scaleType="fitCenter"
                android1:contentDescription="dice1"
                android1:src="@drawable/dice1" />
            
		            
            <RadioGroup
                android:id="@+id/dice1group"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android1:orientation="horizontal"
                android1:paddingLeft="10dp"
                android1:gravity="center_vertical|center_horizontal">

                <RadioButton
                    android1:layout_width="40dp"
                    android1:layout_height="40dp"
                    android1:button="@drawable/sel_dice1"
                    android1:text="1"
                    android1:textColor="@android:color/transparent" />

                <RadioButton
                    android1:button="@drawable/sel_dice2"
                    android:text="2"
                    android1:layout_width="40dp"
                    android1:layout_height="40dp"
                    android1:textColor="@android:color/transparent" />

                <RadioButton
                    android1:button="@drawable/sel_dice3"
                    android:text="3"
                    android1:layout_width="40dp"
                    android1:layout_height="40dp"
                    android1:textColor="@android:color/transparent" />

                <RadioButton 
                    android1:button="@drawable/sel_dice4"
                    android:text="4"
                    android1:layout_width="40dp"
                    android1:layout_height="40dp"
                    android1:textColor="@android:color/transparent" />
                
                <RadioButton 
                    android1:button="@drawable/sel_dice5"
                    android:text="5"
                    android1:layout_width="40dp"
                    android1:layout_height="40dp"
                    android1:textColor="@android:color/transparent" />
                
                <RadioButton 
                    android1:button="@drawable/sel_dice6"
                    android:text="6"
                    android1:layout_width="40dp"
                    android1:layout_height="40dp"
                    android1:textColor="@android:color/transparent" />
                
            </RadioGroup>
                
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dice2layout"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:padding="2dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="3dp"
            android:layout_centerHorizontal="true" 
       		android:layout_below="@id/dice1layout" >
       		
            <ImageView
                android1:layout_marginRight="5dp"
                android1:layout_marginLeft="10dp"
                android1:layout_width="40dp"
                android1:layout_height="40dp"
                android1:scaleType="fitCenter"
                android1:contentDescription="dice2"
                android1:src="@drawable/dice2" />
	            
            <RadioGroup
                android:id="@+id/dice2group"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android1:gravity="center_vertical|center_horizontal">

                <RadioButton
                    android1:layout_width="40dp"
                    android1:layout_height="40dp"
                    android1:button="@drawable/sel_dice1"
                    android1:text="1"
                    android1:textColor="@android:color/transparent" />

                <RadioButton
                    android1:button="@drawable/sel_dice2"
                    android:text="2"
                    android1:layout_width="40dp"
                    android1:layout_height="40dp"
                    android1:textColor="@android:color/transparent" />

                <RadioButton
                    android1:button="@drawable/sel_dice3"
                    android:text="3"
                    android1:layout_width="40dp"
                    android1:layout_height="40dp"
                    android1:textColor="@android:color/transparent" />

                <RadioButton 
                    android1:button="@drawable/sel_dice4"
                    android:text="4"
                    android1:layout_width="40dp"
                    android1:layout_height="40dp"
                    android1:textColor="@android:color/transparent" />
                
                <RadioButton 
                    android1:button="@drawable/sel_dice5"
                    android:text="5"
                    android1:layout_width="40dp"
                    android1:layout_height="40dp"
                    android1:textColor="@android:color/transparent" />
                
                <RadioButton 
                    android1:button="@drawable/sel_dice6"
                    android:text="6"
                    android1:layout_width="40dp"
                    android1:layout_height="40dp"
                    android1:textColor="@android:color/transparent" />

            </RadioGroup>
        </LinearLayout>
    
        <LinearLayout
            android:id="@+id/dice3layout"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:padding="2dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="3dp"
            android:layout_centerHorizontal="true" 
       		android:layout_below="@id/dice2layout" >
       		
            <ImageView
                android1:layout_marginRight="5dp"
                android1:layout_marginLeft="10dp"
                android1:layout_width="40dp"
                android1:layout_height="40dp"
                android1:scaleType="fitCenter"
                android1:contentDescription="dice3"
                android1:src="@drawable/dice3" />
	        
            <RadioGroup
                android:id="@+id/dice3group"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android1:gravity="center_vertical|center_horizontal" >

                <RadioButton
                    android1:layout_width="40dp"
                    android1:layout_height="40dp"
                    android1:button="@drawable/sel_dice1"
                    android1:text="1"
                    android1:textColor="@android:color/transparent" />

                <RadioButton
                    android1:button="@drawable/sel_dice2"
                    android:text="2"
                    android1:layout_width="40dp"
                    android1:layout_height="40dp"
                    android1:textColor="@android:color/transparent" />

                <RadioButton
                    android1:button="@drawable/sel_dice3"
                    android:text="3"
                    android1:layout_width="40dp"
                    android1:layout_height="40dp"
                    android1:textColor="@android:color/transparent" />

                <RadioButton 
                    android1:button="@drawable/sel_dice4"
                    android:text="4"
                    android1:layout_width="40dp"
                    android1:layout_height="40dp"
                    android1:textColor="@android:color/transparent" />
                
                <RadioButton 
                    android1:button="@drawable/sel_dice5"
                    android:text="5"
                    android1:layout_width="40dp"
                    android1:layout_height="40dp"
                    android1:textColor="@android:color/transparent" />
                
                <RadioButton 
                    android1:button="@drawable/sel_dice6"
                    android:text="6"
                    android1:layout_width="40dp"
                    android1:layout_height="40dp"
                    android1:textColor="@android:color/transparent" />

            </RadioGroup>
        </LinearLayout>
    
    	</RelativeLayout>
    	
        <Button
            android1:id="@+id/validateDiceBtn"
            android1:layout_width="fill_parent"
            android1:layout_height="55dp"
            android1:layout_below="@id/gtop_layout"
            android1:text="@string/ValidateDice"
            android1:onClick="ValidateDice"
        	android1:background="@drawable/sel_dice_button"
        	android1:layout_margin="2dp"
	        android1:textSize="32sp"
    	    android1:textStyle="bold"
    	    android1:textColor="#d7a91b" />
        
        <LinearLayout 
            android1:id="@+id/customActionLayout"
            android1:layout_width="fill_parent"
            android1:layout_height="65dp"
            android1:layout_below="@id/validateDiceBtn">
            
	        <Button
	            android1:id="@+id/bevueBtn"
	            android1:layout_width="fill_parent"
	            android1:layout_height="fill_parent"
	            android1:layout_margin="2dp"
	            android1:layout_weight=".33"
	            android1:background="@drawable/sel_short_button"
	            android1:onClick="diplayBevue"
	            android1:text="@string/BevueLbl"
	            android1:textColor="#ffffff"
	            android1:textSize="20dp" />

	        <Button
	            android1:id="@+id/civetBtn"
	            android1:layout_width="fill_parent"
	            android1:layout_height="fill_parent"
	            android1:layout_margin="2dp"
	            android1:layout_weight=".33"
	            android1:background="@drawable/sel_short_button"
	            android1:onClick="civetBtnAction"
	            android1:text="@string/PlayCivetLbl"
	            android1:textColor="#ffffff"
	            android1:textSize="18sp" />
	        
	        <Button
	            android1:id="@+id/grelottineBtn"
	            android1:layout_width="fill_parent"
	            android1:layout_height="fill_parent"
	            android1:layout_margin="2dp"
	            android1:layout_weight=".33"
	            android1:background="@drawable/sel_short_button"
	            android1:onClick="grelottineBtnAction"
	            android1:text="@string/PlayGrelottine"
	            android1:textColor="#ffffff"
	            android1:textSize="20sp" />
        
        </LinearLayout>
    	
        <TextView
            android1:id="@+id/scoreTitleLbl"
            android1:layout_width="fill_parent"
            android1:layout_height="wrap_content"
            android1:layout_below="@id/customActionLayout"
            android1:gravity="center_vertical|center_horizontal"
	        android1:textColor="#ffffff" 
	        android1:textSize="14sp"
	        android1:text="@string/PointsSumUp" />
        
        <ListView
	        android1:id="@android:id/list" 
	        android1:layout_width="fill_parent" 
	        android1:layout_height="fill_parent" 
	        android1:textColor="#ffffff" 
	        android1:layout_alignParentBottom="true" 
	        android1:layout_below="@id/scoreTitleLbl">
    	</ListView>
                 

    </RelativeLayout>
